# oxide-tracker

./: Cargo.toml
src/: capture-main.rs  main.rs  stats-main.rs
src/capture/: data.rs  file.rs  metadata.rs  mod.rs
src/xfunc/: atom.rs  display.rs  mod.rs  session.rs  textprop.rs  window.rs
src/xfunc/util/: get_window_property.rs
src/xx/: atom.rs  display.rs  mod.rs  session.rs  textprop.rs  util.rs  window.rs
