[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = {version = "1.0.3", features=["xlib"]}
fs2 = {version = "0.4.3"}

[[bin]]
name = "capture"
path = "src/capture-main.rs"

[[bin]]
name = "stats"
path = "src/stats-main.rs"
